# ewrvp7lv7-gear-academy

./: .gitignore  Cargo.toml  README.md
2-escrow/: build.rs
2-escrow/io/src/: lib.rs
2-escrow/src/: lib.rs
2-escrow/state/src/: lib.rs
2-escrow/tests/: escrow_test.rs
4-store/src/: lib.rs
5-auction/src/: lib.rs
hello-world/: build.rs
hello-world/io/: Cargo.toml
my-hello-world/: .gitignore  Cargo.toml
my-hello-world/io/src/: lib.rs
my-hello-world/src/: lib.rs
my-hello-world/tests/: hello_world_test.rs
tamagotchi.5/: Cargo.toml  build.rs
tamagotchi.5/io/: Cargo.toml
tamagotchi.5/io/src/: lib.rs
tamagotchi.5/src/: lib.rs  nftt.rs
tamagotchi.5/tests/: main_tests.rs  nft_tests.rs
tamagotchi.6/: Cargo.toml  build.rs
tamagotchi.6/io/: Cargo.toml
tamagotchi.6/io/src/: lib.rs
tamagotchi.6/src/: lib.rs  nftt.rs
tamagotchi.6/tests/: main_tests.rs  nft_tests.rs
tamagotchi1/: .binpath  Cargo.toml
tamagotchi1/io/: Cargo.toml
tamagotchi1/io/src/: lib.rs
tamagotchi1/src/: lib.rs
tamagotchi1/tests/: hello_world_test.rs
