[package]
name = "tamagotchi"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
gstd = { workspace = true, features = ["debug"] }
parity-scale-codec.workspace = true
scale-info.workspace = true
tamagotchi-io = { path = "io" }

[build-dependencies]
gear-wasm-builder.workspace = true
tamagotchi-io = { path = "io" }

[dev-dependencies]
gtest = { git = "https://github.com/gear-tech/gear.git", branch = "testnet" }
